@@ -26,7 +26,6 @@
         <EditorIndex Value="8"/>
         <TopLine Value="313"/>
         <CursorPos Y="391"/>
-        <FoldState Value=" T3lA0U141 Pekc05"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -169,9 +168,10 @@
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="38"/>
-        <CursorPos Y="66"/>
+        <TopLine Value="223"/>
+        <CursorPos X="30" Y="245"/>
         <UsageCount Value="145"/>
         <Loaded Value="True"/>
       </Unit>
@@ -203,10 +203,10 @@
       <Unit>
         <Filename Value="BDPColorClusterUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="7"/>
-        <TopLine Value="216"/>
-        <CursorPos X="22" Y="246"/>
+        <TopLine Value="88"/>
+        <CursorPos X="20" Y="270"/>
+        <FoldState Value=" T7DGQ1 T3iU089 piYjJ09611 Pifj80w"/>
         <UsageCount Value="31"/>
         <Loaded Value="True"/>
       </Unit>
@@ -508,34 +508,6 @@
     </Units>
     <JumpHistory HistoryIndex="29">
       <Position>
-        <Filename Value="BDPPaletteEditorUnit.pas"/>
-        <Caret Line="238" Column="18" TopLine="217"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPColorClusterUnit.pas"/>
-        <Caret Line="15" Column="12"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPColorClusterUnit.pas"/>
-        <Caret Line="53" Column="39" TopLine="29"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPColorClusterUnit.pas"/>
-        <Caret Line="23" Column="11" TopLine="12"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPColorClusterUnit.pas"/>
-        <Caret Line="20" Column="9" TopLine="10"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPPaletteEditorUnit.pas"/>
-        <Caret Line="9" Column="61"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPColorClusterUnit.pas"/>
-        <Caret Line="22" Column="6" TopLine="11"/>
-      </Position>
-      <Position>
         <Filename Value="BDPColorClusterUnit.pas"/>
         <Caret Line="60" Column="23" TopLine="16"/>
       </Position>
@@ -626,6 +598,34 @@
       <Position>
         <Filename Value="BDPColorClusterUnit.pas"/>
         <Caret Line="245" Column="23" TopLine="223"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPPaletteEditorUnit.pas"/>
+        <Caret Line="156" Column="27" TopLine="123"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPPaletteEditorUnit.pas"/>
+        <Caret Line="153" Column="71" TopLine="132"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPColorClusterUnit.pas"/>
+        <Caret Line="46" Column="41" TopLine="27"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPColorClusterUnit.pas"/>
+        <Caret Line="58" Column="5" TopLine="27"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPColorClusterUnit.pas"/>
+        <Caret Line="42" TopLine="26"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPColorClusterUnit.pas"/>
+        <Caret Line="57" Column="9"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPColorClusterUnit.pas"/>
+        <Caret Line="270" Column="20" TopLine="88"/>
       </Position>
     </JumpHistory>
     <RunParams>
